<resources>
    <string name="app_name">urvirl</string>
    <string name="email">Your email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="link">Link</string>
    <string name="contact_us">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="imageDescription">logo</string>
    <string name="message">Message</string>
    <string name="message_title">Author (Time Date)</string>
    <string name="new_group">Create Group</string>
    <string name="name">Name</string>
    <string name="owner">Owner (optional)</string>
    <string name="description">Description (optional)</string>
    <string name="create_group">Create Group</string>
    <color name="white">#FDFDFD</color>
    <color name="purple">#4E008E</color>
    <color name="light_blue">#00A3E0</color>
    <color name="grey">#808080</color>
    <color name="red">#FF0000</color>
    <string name="toggle_turn_on">Yes</string>
    <string name="toggle_turn_off">No</string>
    <string name="group_private">Make group private?</string>
    <string name="memeber_events">Members can create events?</string>
    <string name="find_groups">Find Groups</string>
    <string name="find_friends">Find Friends</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
    <string name="joined">joined</string>
    <string name="menu_search">Search</string>
    <string name="events">Events</string>
    <string name="my_events">My Events</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_members">Invite Members</string>
    <string name="members">Members in Group</string>
    <string name="delete">Destroy Group</string>
    <string name="invite">Invite</string>
    <string name="edit">Edit</string>
    <string name="new_event">New Event</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_name">Event Name</string>
    <string name="event_content">Content</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="media_message">Media Message</string>
    <string name="enter_message">Enter message</string>
    <string name="take">Take</string>
</resources>
