<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/event_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/event_description_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/event_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/start"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:id="@+id/start_date_btn"
            android:background="@color/light_blue"
            android:textColor="@color/white"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:id="@+id/start_time_btn"
            android:background="@color/light_blue"
            android:textColor="@color/white"
            android:layout_margin="25dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/end"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:id="@+id/end_date_btn"
            android:background="@color/light_blue"
            android:textColor="@color/white"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:id="@+id/end_time_btn"
            android:background="@color/light_blue"
            android:textColor="@color/white"
            android:layout_margin="25dp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:id="@+id/send_btn"
        android:layout_gravity="center_horizontal"
        android:background="@color/light_blue"
        android:textColor="@color/white"
        android:layout_margin="25dp"/>


</LinearLayout>