<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".View.MainActivityFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/urvirl_logo_400v2"
            android:cropToPadding="false"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/login_button"
            android:layout_alignEnd="@+id/login_button"
            android:contentDescription="@string/imageDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@color/light_blue"
            android:id="@+id/textView"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailInput"
            android:layout_alignRight="@+id/passwordInput"
            android:layout_alignEnd="@+id/passwordInput"
            android:layout_alignLeft="@+id/passwordInput"
            android:layout_alignStart="@+id/passwordInput"
            android:layout_below="@id/textView"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordInput"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/emailInput"
            android:hint="@string/password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_below="@+id/passwordInput"
            android:background="@color/light_blue"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="25dp"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_button"
            android:id="@+id/linkOne" />

        <TextView
            android:text="@string/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linkTwo"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/linkOne"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>
